tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax01/Test.java
public class Test {
	public interface A {
		void m() { }
	}
}